feat: enhance accessibility and UI/UX by updating ARIA labels, improving button icons, and adjusting styles

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -492,7 +492,7 @@
         "message": "Access to localhost is not allowed for filter imports"
     },
     "openSettings": {
-        "message": "Open Settings"
+        "message": "Settings"
     },
     "backToMain": {
         "message": "Back to Main"
