1.  **Analyze the Request:**     *   Role: Expert Git commit message generator.     *   Input: Large diff (27 files) showing code changes, documentation updates, new tests, and design docs.     *   Rules: Specific conventional commit format, no brackets/metadata, only the commit message.     *   Language: English (implied by the prompt "You should always speak and think in the 'English' (en) language").
2.  **Analyze the Diff Content (High Level):**
    *   **Security:**
        *   API Key Encryption: Added `src/utils/crypto.js` (AES-GCM, PBKDF2). Updated `storage.js` to auto-encrypt keys on save and decrypt on load. Added tests.
        *   Dynamic URL Validation: Added `isUrlAllowed`, `normalizeUrl`, `buildAllowedUrls` in `storage.js` and `fetch.js`. Updated `aiClient.js` and `service-worker.js` to use these checks.
    *   **UI/UX:**
        *   Contrast fixes (AA compliance): Darker text colors (`#333`, `#444`), darker primary button (`#2E7D32`), darker spinner.
        *   Inline validation: Added `aria-invalid`, `aria-describedby`, and `.field-error` elements in HTML and validation logic in JS.
        *   Color palette: Moved to CSS variables (`:root`).
        *   Dark mode: Added `@media (prefers-color-scheme: dark)` overrides.
        *   Transitions: Modal and dropdown animations.
    *   **Features:**
        *   Connection Testing: "Save & Test" now tests both Obsidian and AI. Added `testConnection` methods. Updated i18n messages.
        *   CSP adjustment: Modified `manifest.json` and `popup.html` CSP to allow external connections.
    *   **Fixes:**
        *   PII Sanitizer: Added input size limit (50KB) and timeout (5s) to prevent ReDoS attacks. Changed `sanitizeRegex` to async.
    *   **Docs/Testing:**
        *   Updated `CHANGELOG.md` extensively.
        *   Added design docs (`2026-02-09-api-key-encryption-design.md`, `2026-02-09-url-validation-exploration.md`).
        *   Updated `SETUP_GUIDE.md`.
        *   Added extensive tests (`crypto

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -410,6 +410,18 @@
     "successConnected": {
         "message": "Success! Connected to Obsidian. Settings Saved."
     },
+    "successAllConnected": {
+        "message": "Success! Connected to both Obsidian and AI. Settings Saved."
+    },
+    "obsidianOkAiFailed": {
+        "message": "Obsidian: OK / AI Connection Failed: {message}"
+    },
+    "obsidianFailedAiOk": {
+        "message": "Obsidian Connection Failed: {message} / AI: OK"
+    },
+    "bothConnectionFailed": {
+        "message": "Obsidian Failed: {obsidianMessage} / AI Failed: {aiMessage}"
+    },
     "connectionFailed": {
         "message": "Connection Failed: {message}"
     },
