fix(dashboard): add localized error feedback and storage synchronization
- Extract duplicate error handling into showRecordError() helper
- Add recordError i18n keys for EN and JA localization
- Sync savedUrls array when updating timestamps to prevent data inconsistency

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -412,6 +412,10 @@
     "saveError": {
         "message": "Save error"
     },
+    "recordError": {
+        "message": "Failed to record",
+        "description": "Error message shown when manual recording fails in dashboard"
+    },
     "clipboardCopyFailed": {
         "message": "Failed to copy to clipboard"
     },
