feat(dashboard): add pagination and delete forever for skipped pages
Implement 10-item pagination for history list and skipped pages sections
with descending timestamp order. Add "Delete Forever" button to each
skipped entry for permanent removal without recording.

- Reset to page 1 on filter/search changes, preserve current page on deletion
- Hide pagination navigation when only one page exists
- Remove unused PSH-1002 privacy status code and consolidate to PSH-1001
- Update localization strings for unified cache control status

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1115,6 +1115,9 @@
     "pendingReasonAuth": {
         "message": "Authorization header"
     },
+    "pendingDeleteForever": {
+        "message": "🗑 Delete Forever"
+    },
     "diagConnectionPlaceholder": {
         "message": "Click \"Test Connection\" to check the Obsidian API connection."
     },
